// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidatorRow > should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-secondary-200 dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-secondary-200 dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render changed style when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="ValidatorVoteAmount"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="css-yc1qjo"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-right focus:text-left pr-8 css-1937ogs"
                      data-testid="InputCurrency"
                      name="amount"
                      placeholder="0"
                      type="text"
                      value="30"
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-text"
                >
                  ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative text-theme-warning-700 hover:text-theme-warning-800"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Changed
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-success-100 dark:bg-theme-background dark:border-theme-success-600"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-success-100 dark:bg-theme-background dark:border-theme-success-600"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-success-100 dark:bg-theme-background dark:border-theme-success-600"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0 bg-theme-success-100 dark:bg-theme-background dark:border-theme-success-600"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-success-100 dark:bg-theme-background dark:border-theme-success-600"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-success-100 sm:bg-transparent dark:bg-theme-success-600 dark:sm:bg-transparent text-theme-primary-reverse-600 hover:text-theme-primary-reverse-700 dark:text-white dark:sm:text-theme-primary-reverse-600 dark:sm:hover:text-theme-primary-reverse-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Selected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the selected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-200 sm:bg-transparent dark:bg-theme-navy-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-white dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   genesis_42 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-secondary-200 dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   genesis_17 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <span
                class="w-full sm:w-auto"
              >
                <button
                  class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:text-theme-primary-700 hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-secondary-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-black dark:text-theme-secondary-800 dark:sm:text-theme-black"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the selected vote 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-200 sm:bg-transparent dark:bg-theme-navy-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-white dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   genesis_42 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-secondary-200 dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   genesis_17 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <span
                class="w-full sm:w-auto"
              >
                <button
                  class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:text-theme-primary-700 hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-secondary-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-black dark:text-theme-secondary-800 dark:sm:text-theme-black"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the unselected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-danger-100 sm:bg-transparent dark:bg-theme-danger-400 dark:sm:bg-transparent text-theme-danger-400 hover:text-theme-danger-500 dark:text-white dark:sm:text-theme-danger-400 dark:sm:hover:text-theme-danger-500"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Unselected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 ml-3 pl-3 text-sm leading-[17px] font-semibold border-2 border-r-0 border-transparent h-9 min-h-9 my-0"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 font-semibold border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0 space-x-3"
          >
            <div
              class="relative h-[17px] grow"
            >
              <div
                class="absolute flex w-full items-center"
              >
                <div
                  class="truncate"
                >
                   arkx 
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent h-9 min-h-9 my-0"
          >
            <div>
              <div
                class="text-theme-warning-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    transform="translate(600 -1329.038)"
                  >
                    <circle
                      cx="-590"
                      cy="1339.038"
                      r="9"
                    />
                    <path
                      d="M-592 1342.338v-6.5m4 6.5v-6.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 !my-0"
          >
            <a
              class="ring-focus group/inner inline-block w-24 md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-167zzsv"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-bxx244"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
                data-testid="Link__external"
                height="12"
                width="12"
              >
                <svg
                  id="arrow-external"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="ValidatorVoteAmount"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="css-199q0uq"
                  disabled=""
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-right focus:text-left pr-8 text-theme-secondary-text css-1937ogs"
                      data-testid="InputCurrency"
                      disabled=""
                      name="amount"
                      placeholder="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7 cursor-default"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-secondary-400 dark:text-theme-secondary-700"
                >
                  ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 rounded-r dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-3 mr-3 border-2 border-l-0 border-transparent h-9 min-h-9"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="p-3 items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none -mr-3 w-full rounded-none py-3 text-sm leading-[17px] hover:underline dark:hover:text-theme-primary-500 sm:w-auto sm:rounded sm:py-0 relative bg-theme-navy-100 sm:bg-transparent dark:bg-theme-secondary-800 dark:sm:bg-transparent text-theme-primary-600 hover:text-theme-primary-700 dark:text-theme-secondary-200 dark:sm:text-theme-primary-600 dark:sm:hover:text-theme-primary-700"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
